better justify with hyphen

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ .Site.Language.Lang }}">
     {{- partial "head/common.html" . -}}
     <meta name="description" content="{{ .Description }}">
     <meta name="keywords" content="{{ .Keywords }}">
