fix scrollbar jitter

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     {{- partial "head/common.html" . -}}
-    <body class="show-scrollbar">
+    <body class="show-scrollbar loading">
         {{- partial "header.html" . -}}
 
         {{/*  <h2 class="lg:w-1/2 mx-auto">{{ i18n "welcome_message" }}</h2>  */}}
