test open graph

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,6 +4,12 @@
     <meta name="description" content="{{ .Description }}">
     <meta name="keywords" content="{{ .Keywords }}">
     <meta name="canonical" content="{{ .Permalink }}">
+    <meta property="og:title" content="{{ .Title }}">
+    <meta property="og:description" content="{{ .Description }}">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="{{ .Permalink }}">
+    <meta property="og:site_name" content="{{ .Site.Title }}">
+
     {{ partial "partials/structured-data.html" .}}
     <body class="show-scrollbar">
         <div class="progress-container">
