--- a/layouts/partials/head/common.html
+++ b/layouts/partials/head/common.html
@@ -1,5 +1,5 @@
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>{{ .Title | default .Site.Title }}</title>
 <link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="/css/second.css">
